<resources>
    <string name="app_name">Start</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="title_activity_draw_layout">DrawLayout</string>
    <string name="title_activity_lay_out_for_measures">LayOutForMeasuresActivity</string>
    <string name="title_activity_layouttmeasures">Layouttmeasures</string>
    <string name="title_activity_final_layout_result">FinalLayoutResult</string>
    <string name="text_drawLayout">Draw The Layout</string>
    <string name="text_measure_layout">Click on Line to Insert measures</string>
    <string name="nextButton">Next</string>
    <string name="saveButton">Save</string>
    <string name="editButton">Edit</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="View_layout">View The Layout</string>
    <string name="female">Female</string>
    <string name="title_activity_profile">profileActivity</string>
    <string name="title_activity_print_markers">PrintMarkers</string>
    <string name="title_activity_choose_layout">ChooseLayoutActivity</string>
    <string name="title_activity_view_layout">ViewLayoutActivity</string>
    <string name="height">Height</string>
    <string name="backproblems">Backproblems</string>
    <string name="upperback">upper</string>
    <string name="none">none</string>
    <string name="lowerback">lower</string>
    <string name="weight">Weight</string>
    <string name="title_activity_performance_graph">performanceGraphActivity</string>
    <string name="chartGraph">The values of your performances</string>
    <string name="play">Play</string>
    <string name="performance">View Performance</string>
    <string name="trial">Trial</string>
    <string name="title_activity_traget_position">TragetPositionActivity</string>
    <string name="editB">Edit</string>

</resources>
