<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".profileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableBottom="@drawable/ic_arrow_back_white" />

        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Profile"
            android:textColor="#fafafa"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout

        android:id="@+id/profile_name"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/editText_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/profile_height"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/editText_profile_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/profile_weight"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText

            android:id="@+id/editText_profile_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:id="@+id/profile_birthdate_layout"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2">

        <EditText

            android:id="@+id/editText_birthdateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="Birthdate" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout

        android:id="@+id/relativeLayout"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/name"
            android:fontFeatureSettings="@string/name"
            android:paddingRight="15dp"
            android:text="@string/gender"
            android:textColor="#fff"
            android:textSize="20dp" />

        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/gender"
            android:orientation="horizontal"

            >

            <RadioButton
                android:id="@+id/male_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/male"
                android:textColor="#fff" />

            <RadioButton

                android:id="@+id/female_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/female"
                android:textColor="#fff"

                />
        </RadioGroup>
    </RelativeLayout>


    <Button
        android:id="@+id/button_save"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/button_shape_for_canvas"
        android:drawableRight="@drawable/ic_save_white"
        android:text="@string/saveButton"
        android:textColor="#fafafa"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/relativeLayout"-->


    <Button
        android:id="@+id/button_edit"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_shape_for_canvas"
        android:drawableRight="@drawable/ic_edit_white"
        android:text="@string/editButton"
        android:textColor="#fafafa"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />

    <!--<TextView-->

        <!--android:id="@+id/backProblems"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="40dp"-->
        <!--android:layout_marginTop="470dp"-->
        <!--android:layout_marginEnd="247dp"-->
        <!--android:fontFamily="@string/name"-->
        <!--android:fontFeatureSettings="@string/name"-->
        <!--android:paddingRight="15dp"-->
        <!--android:text="@string/backproblems"-->
        <!--android:textColor="#fff"-->
        <!--android:textSize="20dp"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="1.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->


    <RelativeLayout

        android:id="@+id/relativeLayout1"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/backProblems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@string/name"
            android:fontFeatureSettings="@string/name"
            android:paddingRight="15dp"
            android:text="@string/backproblems"
            android:textColor="#fff"
            android:textSize="20dp" />

        <RadioGroup

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/up_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upperback"
                android:textColor="#fff" />

            <RadioButton
                android:id="@+id/lower_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/lowerback"
                android:textColor="#fff" />

            <RadioButton

                android:id="@+id/none_radio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/none"
                android:textColor="#fff"

                />
        </RadioGroup>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>